# Projeto_2/src/model/dto/CategoriaDto.ts
@@ -1,0 +1,9 @@
+export class CategoriaDto {
+    id: number;
+    name: string;
+
+    constructor(id?:number, name?:string){
+        this.id = id || 0;
+        this.name = name || '';
+    }
+}
