# Projeto_2/src/model/dto/CategoriaRequestDto.ts
@@ -1,0 +1,7 @@
+export class CategoriaRequestDto {
+    name: string;
+
+    constructor(name?:string){
+        this.name = name || '';
+    }
+}
